// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditorToolbar > matches snapshot for a clean, unsaved-changes-free file 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-2 border-b border-zinc-200 px-3 py-2 dark:border-zinc-800"
  >
    <a
      class="rounded px-2 py-1.5 text-sm hover:bg-zinc-100 dark:hover:bg-zinc-800 md:hidden"
      href="/"
    >
      ← 戻る
    </a>
    <span
      class="flex-1 truncate text-sm font-medium"
    >
      Welcome.md
    </span>
    <button
      class="rounded px-3 py-1.5 text-sm text-red-600 hover:bg-red-50 dark:text-red-400 dark:hover:bg-red-950"
      type="button"
    >
      削除
    </button>
    <button
      class="rounded bg-zinc-900 px-3 py-1.5 text-sm text-white hover:bg-zinc-700 disabled:opacity-40 dark:bg-zinc-100 dark:text-zinc-900 dark:hover:bg-zinc-300"
      disabled=""
      type="button"
    >
      保存
    </button>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar > matches snapshot for a dirty file that is saving 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-2 border-b border-zinc-200 px-3 py-2 dark:border-zinc-800"
  >
    <a
      class="rounded px-2 py-1.5 text-sm hover:bg-zinc-100 dark:hover:bg-zinc-800 md:hidden"
      href="/"
    >
      ← 戻る
    </a>
    <span
      class="flex-1 truncate text-sm font-medium"
    >
      Projects/Ideas.md
      <span
        class="ml-1.5 text-amber-600 dark:text-amber-400"
        title="未保存の変更があります"
      >
        ●
      </span>
    </span>
    <button
      class="rounded px-3 py-1.5 text-sm text-red-600 hover:bg-red-50 dark:text-red-400 dark:hover:bg-red-950"
      type="button"
    >
      削除
    </button>
    <button
      class="rounded bg-zinc-900 px-3 py-1.5 text-sm text-white hover:bg-zinc-700 disabled:opacity-40 dark:bg-zinc-100 dark:text-zinc-900 dark:hover:bg-zinc-300"
      disabled=""
      type="button"
    >
      保存中…
    </button>
  </div>
</DocumentFragment>
`;
